@@ -14,6 +14,13 @@
 	  this helps to fix a jerkiness in scripts introduced in previous commits.
 	  Also, script opcode 'delay' and any scripted frame changes or steps now will
 	  clear the rest time for actors.
+	* Fixed problem in Windows builds with USE_EXULTSTUDIO option which caused
+	  excessive processor usage, as well as being indirectly responsible for the
+	  rapid build-up of the avatar's 'rest_time'.
+	* The files 'paperdoll_info.txt', 'bodies.txt' and 'shape_info.txt' (and
+	  similar files in the future -- and with the exception of the files bundled
+	  the Exult_XX.flx files) no longer require declaration of all sections to be
+	  properly parsed.
 
 2006-09-21  Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Decoupled usecode functions for shapes > 1023 from the shape #. Removed
